samples/_failures_safe/1761617431_9ea17f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ebb343e.c: In function ‘main’:
./samples/SAFE/__tmp_9ebb343e.c:147:5: error: expected ‘,’ or ‘;’ at end of input
  147 |     size_t len = strlen
      |     ^~~~~~
./samples/SAFE/__tmp_9ebb343e.c:147:5: error: expected declaration or statement at end of input
